--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"daisyui": "^2.43.0",
 		"json-server": "^0.17.1",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"simple-crypto-js": "^3.0.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.26",
